--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                 Have questions? Let’s talk!
             </p>
 
-            <form name="contact-form" method="post" id="contact-form" class="contact-form animate__animated animate__fadeInUp">
+            <form method="post" id="contact-form" class="contact-form animate__animated animate__fadeInUp">
 
                 <section class="py-24">
                     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
