--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
+    <title>I-StartUp | ESfItS</title>
     <link rel="shortcut icon" href="Assets/logocon-full.png" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/logocon-full.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/logocon-full.png">
