--- a/Incubationapp.html
+++ b/Incubationapp.html
@@ -9,24 +9,24 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/logocon-full.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/logocon-full.png">
     <link rel="canonical" href="https://www.i-startup.tn/">
-    <meta name="title" content="I-StartUp | Acceleration Application" />
-    <meta name="description" content="Application Form for the acceleration program level up your startup and accelerate your business." />
+    <meta name="title" content="I-StartUp | Incubation Application" />
+    <meta name="description" content="Application Form for the Incubation program level up your startup and accelerate your business." />
     <meta name="keywords" content="startup, MVP, business mentorship, IT team, Tunisia, entrepreneurs">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.i-startup.tn/" />
-    <meta property="og:title" content="I-StartUp | Acceleration Application" />
-    <meta property="og:description" content="Application Form for the acceleration program level up your startup and accelerate your business." />
+    <meta property="og:title" content="I-StartUp | Incubation Application" />
+    <meta property="og:description" content="Application Form for the Incubation program level up your startup and accelerate your business." />
     <meta property="og:image" content="Assets/meta.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.i-startup.tn/" />
-    <meta name="twitter:title" content="I-StartUp | Acceleration Application" />
-    <meta name="twitter:description" content="Application Form for the acceleration program level up your startup and accelerate your business." />
+    <meta name="twitter:title" content="I-StartUp | Incubation Application" />
+    <meta name="twitter:description" content="Application Form for the Incubation program level up your startup and accelerate your business." />
     <meta name="twitter:image" content="Assets/meta.png" />
-    <title>Acceleration | I-StartUp</title>
+    <title>Incubation | I-StartUp</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
